RESOLVED FIXED210049
ProcessAssertion should use ASCIILiteral for its reason
https://bugs.webkit.org/show_bug.cgi?id=210049
Summary ProcessAssertion should use ASCIILiteral for its reason
Chris Dumez
Reported 2020-04-06 08:27:32 PDT
ProcessAssertion should use ASCIILiteral for its reason, instead of a String.
Attachments
Patch (6.32 KB, patch)
2020-04-06 08:29 PDT, Chris Dumez
no flags
Chris Dumez
Comment 1 2020-04-06 08:29:40 PDT
Alex Christensen
Comment 2 2020-04-06 09:45:30 PDT
Why?
Chris Dumez
Comment 3 2020-04-06 09:47:48 PDT
(In reply to Alex Christensen from comment #2) > Why? https://bugs.webkit.org/show_bug.cgi?id=209984#c3
Alex Christensen
Comment 4 2020-04-06 10:17:19 PDT
Comment on attachment 395568 [details] Patch This seems silly to me. The API takes an NSString. Using stringWithCString and NSASCIIStringEncoding doesn't improve anything. This is just documenting that all the strings we use happen to be ASCII right now.
Darin Adler
Comment 5 2020-04-06 10:31:35 PDT
(In reply to Alex Christensen from comment #4) > This seems silly to me. The API takes an NSString. Using stringWithCString > and NSASCIIStringEncoding doesn't improve anything. This is just > documenting that all the strings we use happen to be ASCII right now. Seems great to me. Why turn literals into WTF::String just to turn them into NSString later? These are labels from the code, not arbitrary strings.
EWS
Comment 6 2020-04-06 11:07:31 PDT
Committed r259579: <https://trac.webkit.org/changeset/259579> All reviewed patches have been landed. Closing bug and clearing flags on attachment 395568 [details].
Radar WebKit Bug Importer
Comment 7 2020-04-06 11:08:17 PDT
Alex Christensen
Comment 8 2020-04-06 11:41:10 PDT
I guess that's true. This reduces a few WTF::String constructions.
Note You need to log in before you can comment on or make changes to this bug.