ProcessAssertion should use ASCIILiteral for its reason https://bugs.webkit.org/show_bug.cgi?id=210049

Reviewed by Alex Christensen.

ProcessAssertion should use ASCIILiteral for its reason, instead of a String.

* Shared/ios/DependencyProcessAssertionIOS.mm:
(WebKit::DependencyProcessAssertion::DependencyProcessAssertion):
* UIProcess/ProcessAssertion.cpp:
(WebKit::ProcessAssertion::ProcessAssertion):
* UIProcess/ProcessAssertion.h:
* UIProcess/ios/ProcessAssertionIOS.mm:
(WebKit::ProcessAssertion::ProcessAssertion):
(WebKit::ProcessAndUIAssertion::ProcessAndUIAssertion):


Canonical link: https://commits.webkit.org/222970@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@259579 268f45cc-cd09-0410-ab3c-d52691b4dbfc